--- a/user_admin/listTreatment_detail_done_edit.html
+++ b/user_admin/listTreatment_detail_done_edit.html
@@ -318,8 +318,11 @@ License: You must have a valid license purchased only from themeforest(the above
 										<a href="user_admin/listTreatment_active.html" class="kt-subheader__breadcrumbs-link">
 											Active Treatments </a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_admin/listTreatment_detail_unpaid.html" class="kt-subheader__breadcrumbs-link">
+										<a href="user_admin/listTreatment_detail_done.html" class="kt-subheader__breadcrumbs-link">
 											Treatment Details </a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_admin/listTreatment_detail_done_edit.html" class="kt-subheader__breadcrumbs-link">
+											Invoice Editing </a>
 									</div>
 								</div>
 							</div>
@@ -333,206 +336,64 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="row">
 
 								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
-									<div class="kt-portlet kt-portlet--mobile">
-										<div class="kt-portlet__head">
-											<div class="kt-portlet__head-label">
-												<h3 class="kt-portlet__head-title">
-													Treatment Status : <span class="kt-portlet__head-title kt-font-success">Done</span>
-												</h3>
-											</div>
-											<div class="kt-portlet__head-toolbar">
-												<ul class="nav nav-pills" role="tablist">
-													<li class="nav-item">
-														<a class="nav-link active" data-toggle="tab" href="#tab-spk" role="tab" aria-selected="true">
-															SPK
-														</a>
-													</li>
-													<li class="nav-item">
-														<a class="nav-link" data-toggle="tab" href="#tab-invoice" role="tab" aria-selected="false">
-															Invoice
-														</a>
-													</li>
-												</ul>
-											</div>
-										</div>
-									</div>
-								</div>
+									<div class="tab-content">
+										<div class="tab-pane active" id="tab-invoice" role="tabpanel">
+											<div class="kt-portlet kt-portlet--mobile" id="print-section">
+												<div class="kt-portlet__head centered-content">
+													<div class="kt-portlet__head-label">
+														<h3 class="kt-portlet__head-title">
+															Treatment Details <span class="kt-font-brand">(Editing)</span>
+														</h3>
+													</div>
+												</div>
+												<form id="kt_form_edit_invoice">
+													<div class="kt-portlet__body">
+			                                            <div class="row" style="margin-bottom:20px;">
+															<div class="col-6">
+				                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+																<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+				                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
+				                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+															</div>
+			                                            </div>
+			                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
+			                                                <tr>
+			                                                    <th width="30%">Tanggal</th>
+			                                                    <th width="10%">:</th>
+			                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+			                                                </tr>
+			                                            </table>
+			        									<table class="table table-bordered table-hover table-checkable" id="table_invoice_edit">
 
-								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
-									<div class="kt-portlet kt-portlet--mobile" id="print-section">
-										<div class="kt-portlet__head centered-content">
-											<div class="kt-portlet__head-label">
-												<h3 class="kt-portlet__head-title">
-													Treatment Details
-												</h3>
-											</div>
-											<div class="kt-portlet__head-toolbar">
-												<a href="user_admin/listTreatment_detail_done_edit.html" class="btn btn-outline-success toolbar-absolute"><i class="la la-edit"></i> Edit</a>
-											</div>
-										</div>
-										<div class="tab-content">
-											<div class="tab-pane active" id="tab-spk" role="tabpanel">
-												<div class="kt-portlet__body">
-		                                            <div class="row" style="margin-bottom:20px;">
-														<div class="col-6">
-			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-			                                                <a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
-			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
-														</div>
-														<div class="col-6">
-															<div class="row">
+			        									</table>
+														<div class="row" style="margin-top:50px;">
+															<div class="col-6" style="padding-right:0px;">
+																<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+					                                                <tr>
+					                                                    <th width="35%">Waktu Mulai</th>
+					                                                    <th width="10%">:</th>
+					                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+					                                                </tr>
+					                                                <tr>
+					                                                    <th>Waktu Selesai</th>
+					                                                    <th>:</th>
+					                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+					                                                </tr>
+					                                            </table>
 															</div>
-														</div>
-		                                            </div>
-		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
-		                                                <tr>
-		                                                    <th width="30%">Tanggal</th>
-		                                                    <th width="10%">:</th>
-		                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-		                                                </tr>
-		                                            </table>
-		        									<table class="table table-bordered table-hover table-checkable" id="table_spk_done"></table>
-													<div class="row" style="margin-top:50px;">
-														<div class="col-6" style="padding-right:0px;">
-															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
-				                                                <tr>
-				                                                    <th width="35%">Waktu Mulai</th>
-				                                                    <th width="10%">:</th>
-				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-				                                                </tr>
-				                                                <tr>
-				                                                    <th>Waktu Selesai</th>
-				                                                    <th>:</th>
-				                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
-				                                                </tr>
-				                                            </table>
-														</div>
-		                                            </div>
-												</div>
-											</div>
-											<div class="tab-pane" id="tab-invoice" role="tabpanel">
-												<div class="kt-portlet__body">
-		                                            <div class="row" style="margin-bottom:20px;">
-														<div class="col-6">
-			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-															<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
-			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
-														</div>
-														<div class="col-6">
-															<div class="row">
-																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-																</div>
-																<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																	<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
-																</div>
+															<div class="col-6" style="padding-left:0px;text-align:right;">
+																<button class="col-5 btn btn-secondary no-print" style="margin-top:5px;">Batal</button>
+																<button type="submit" class="col-5 btn btn-success no-print" style="margin-top:5px;" id="kt_sweetalert_berhasil">Save</button>
 															</div>
-														</div>
-		                                            </div>
-		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
-		                                                <tr>
-		                                                    <th width="30%">Tanggal</th>
-		                                                    <th width="10%">:</th>
-		                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-		                                                </tr>
-		                                            </table>
-		        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
-													<div class="row" style="margin-top:50px;">
-														<div class="col-6" style="padding-right:0px;">
-															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
-				                                                <tr>
-				                                                    <th width="35%">Waktu Mulai</th>
-				                                                    <th width="10%">:</th>
-				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-				                                                </tr>
-				                                                <tr>
-				                                                    <th>Waktu Selesai</th>
-				                                                    <th>:</th>
-				                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
-				                                                </tr>
-				                                            </table>
-														</div>
-														<div class="col-6" style="padding-left:0px;text-align:right;">
-															<button class="col-5 btn btn-success no-print" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
-														</div>
-		                                            </div>
-												</div>
+			                                            </div>
+													</div>
+												</form>
 											</div>
 										</div>
 									</div>
 								</div>
 
 							</div>
-
-                            <!--begin::Modal-->
-							<div class="modal fade" id="kt_modal_treatment_bayar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Pembayaran</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            </button>
-                                        </div>
-										<form id="kt_form_pembayaran">
-	                                        <div class="modal-body">
-												<div class="justify-center kt-margin-b-10">
-													<h4 class="color-main-dark" name="pembayaran_nominal">Rp. 300.000,00</h4>
-												</div>
-                                                <div class="form-group row">
-                                                    <label class="col-form-label col-4">Jenis</label>
-                                                    <div class="col-8">
-														<div class="kt-radio-inline">
-															<label class="kt-radio">
-																<input type="radio"  name="pembayaran_jenis"> Cash
-																<span></span>
-															</label>
-														</div>
-														<div class="kt-radio-inline">
-															<label class="col-6 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> EDC Mandiri
-																<span></span>
-															</label>
-															<label class="col-5 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> EDC BNI
-																<span></span>
-															</label>
-														</div>
-														<div class="kt-radio-inline">
-															<label class="col-6 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> Transfer Mandiri
-																<span></span>
-															</label>
-															<label class="col-5 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> Transfer BNI
-																<span></span>
-															</label>
-														</div>
-														<span class="form-text text-muted" style="margin:0px;"></span>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Diskon</label>
-                                                    <div class="col-8">
-														<div class="input-group">
-		                                                    <input type="text" class="form-control kt-margin-r-5" name="pembayaran_diskon" style="border-radius: 4px;" placeholder="Diskon">
-															<button type="button" class="btn btn-success">Submit</button>
-														</div>
-														<span class="form-text text-muted">Potongan harga : <span class="kt-font-brand" name="pembayaran_diskon_nominal">Rp. 50.000,-</span></span>
-                                                    </div>
-                                                </div>
-	                                        </div>
-	                                        <div class="modal-footer" style="justify-content:center;">
-	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal_2">Submit</button>
-	                                        </div>
-										</form>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!--end::Modal-->
 
 						</div>
 
@@ -611,94 +472,34 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_admin.js"></script>
 
 		<script>
-			// Print function
-			var printFunction = function () {
-				window.print();
-			}
-
-			// Sweetalert
-			$('#kt_sweetalert_berhasil_complaint').click(function(e) {
-			  swal.fire({
-				  title: "Berhasil",
-				  text: "Complaint berhasil ditambahkan",
-				  type: "success",
-				  confirmButtonText: "Ok",
-				  confirmButtonClass: "btn btn-brand"
-			  });
+			// Form validation
+			jQuery.extend(jQuery.validator.messages, {
+				required : "Required"
 			});
 
-			$('#kt_sweetalert_berhasil_modal_2').click(function(e) {
+			$('#kt_form_edit_invoice').on('submit', function(event) {
+				$('.request_required').each(function (item) {
+					$(this).rules('add', {
+						required: true
+					})
+				});
+				event.preventDefault();
+			});
+
+			$('#kt_form_edit_invoice').validate();
+
+			// Sweetalert
+			$('#kt_sweetalert_berhasil').click(function(e) {
 				swal.fire({
 					title: "Berhasil",
-					text: "Pembayaran berhasil dilakukan",
+					text: "Invoice berhasil diubah.",
 					type: "success",
 					confirmButtonText: "Ok",
 					confirmButtonClass: "btn btn-brand"
 				}).then(function(result) {
-					// location.reload();
+					window.location = "user_admin/listTreatment_detail_done_edited.html"
 				});
 			});
-
-			$('#kt_sweetalert_void').click(function(e) {
-				swal.fire({
-					title: 'Tandai sebagai void treatment?',
-					text: "Tindakan ini tidak bisa diubah kembali!",
-					type: 'warning',
-					showCancelButton: true,
-					confirmButtonText: 'Ya, tandai!'
-				}).then(function(result) {
-					if (result.value) {
-						swal.fire(
-							'Ditandai sebagai void!',
-							'Treatment telah digolongkan sebagai void treatment.',
-							'success'
-						)
-					}
-				});
-			});
-
-			// Form Validation
-			$("#kt_form_complaint").validate({
-			  // define validation rules
-			  rules: {
-				  complaint_tanggal : {
-					  required: true,
-					  date: true
-				  },
-				  complaint_tipe : {
-					  required: true
-				  },
-				  complaint_text : {
-					  required: true
-				  }
-			  },
-
-			  invalidHandler: function(event, validator) {
-				  KTUtil.scrollTop();
-			  },
-			  submitHandler: function(form) {
-				  //form[0].submit(); // submit the form
-			  }
-		  	});
-			$("#kt_form_pembayaran").validate({
-	            // define validation rules
-	            rules: {
-					pembayaran_jenis : {
-						required: true
-					},
-					pembayaran_diskon : {
-						required: false,
-						digits: true
-					}
-	            },
-
-	            invalidHandler: function(event, validator) {
-	                KTUtil.scrollTop();
-	            },
-	            submitHandler: function(form) {
-	                //form[0].submit(); // submit the form
-	            }
-        	});
 		</script>
 
 		<!--end::Page Scripts -->
