--- a/user_admin/listTreatment_detail_done_edited.html
+++ b/user_admin/listTreatment_detail_done_edited.html
@@ -363,7 +363,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
 												<h3 class="kt-portlet__head-title">
-													Treatment Details
+													Treatment Details <span class="kt-font-success">(Edited)</span>
 												</h3>
 											</div>
 											<div class="kt-portlet__head-toolbar">
