--- a/user_therapist/treatment_detail_done.html
+++ b/user_therapist/treatment_detail_done.html
@@ -318,26 +318,18 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <div class="row" style="margin-bottom:20px;">
-												<div class="col-6">
-	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-	                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
-												</div>
+											<div style="margin-bottom:20px;">
+                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
+												<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
                                             </div>
-											<table class="col-5" style="margin-bottom:50px">
-                                                <tr>
-                                                    <th width="30%">Tanggal</th>
-                                                    <th width="10%">:</th>
-                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-                                                </tr>
-                                            </table>
         									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
 												<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
 											</div>
 											<div class="row" style="margin-top:50px;">
-												<div class="col-6" style="padding-right:0px;">
-													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
+												<div class="col-sm-6" style="padding-right:0px;">
+													<table class="col-sm-12" style="bottom: 0px; position: absolute;">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
@@ -346,7 +338,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <tr>
 		                                                    <th>Waktu Selesai</th>
 		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
+		                                                    <th style="font-weight:500;" name="waktu_selesai">10.00 WITA</th>
 		                                                </tr>
 		                                            </table>
 												</div>
