--- a/user_therapist/treatment_detail_scheduled.html
+++ b/user_therapist/treatment_detail_scheduled.html
@@ -320,19 +320,13 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 											<div style="margin-bottom:20px;">
                                                 <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
+                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span><br>
+												<span class="kt-font-bold">Tanggal : <span class="kt-font-boldest" name="treatment_tanggal">2 Oktober 2019</span></span>
                                             </div>
-                                            <table class="col-5" style="margin-bottom:50px">
-                                                <tr>
-                                                    <th>Tanggal</th>
-                                                    <th>:</th>
-                                                    <th style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-                                                </tr>
-                                            </table>
         									<table class="table table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
-												<div class="col-6" style="padding-right:0px;">
-		                                            <table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
+												<div class="col-sm-6" style="padding-right:0px;">
+													<table class="col-sm-12" style="bottom: 0px; position: absolute;">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
@@ -341,7 +335,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <tr>
 		                                                    <th>Waktu Selesai</th>
 		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
+		                                                    <th style="font-weight:500;" name="waktu_selesai">-</th>
 		                                                </tr>
 		                                            </table>
 												</div>
