--- a/user_therapist/treatment_detail_done.html
+++ b/user_therapist/treatment_detail_done.html
@@ -363,36 +363,40 @@ License: You must have a valid license purchased only from themeforest(the above
 										<form id="kt_form_treatment_selesai">
 	                                        <div class="modal-body">
 												<div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">No. Pesanan</label>
-                                                    <div class="col-8">
+                                                    <label for="example-text-input" class="col-sm-4 col-form-label">No. Pesanan : </label>
+                                                    <div class="col-sm-8">
                                                         <input type="text" class="form-control color-main-dark" name="treatment_nomor" value="#123456" readonly>
                                                     </div>
                                                 </div>
 												<div id="treatment_list">
-													<div class="form-group row">
-	                                                    <label for="example-text-input" class="col-4 col-form-label">Treatment</label>
-	                                                    <div class="col-8">
-	                                                        <input type="text" class="form-control" name="treatment_nama" placeholder="Treatment">
+													<div class="form-group row kt-margin-b-10">
+	                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Treatment : </label>
+	                                                    <div class="col-sm-8">
+	                                                        <input type="text" class="form-control" name="treatment_nama1" placeholder="Treatment">
 	                                                    </div>
 	                                                </div>
 													<div class="form-group row">
-	                                                    <label for="example-text-input" class="col-4 col-form-label">Pemakaian</label>
-	                                                    <div class="row col-8 kt-margin-0" id=treatment_barang_list>
-	                                                        <div class="col-5" style="padding-left:0px">
-	                                                            <input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
-	                                                        </div>
-	                                                        <div class="row col-7 kt-margin-0" style="padding:0px">
-	                                                            <label for="example-text-input" class="col-2 col-form-label">Qty</label>
-																<div class="col-8">
-		                                                            <input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+	                                                    <label for="example-text-input" class="col-sm-4 col-form-label">Pemakaian : </label>
+	                                                    <div class="col-sm-8" id=treatment_barang_list1>
+															<div class="col-12">
+																<div class="row">
+																	<div class="col-5" style="padding-left:0px">
+			                                                            <input type="text" class="form-control" name="treatment_barang1_1" placeholder="Pemakaian">
+			                                                        </div>
+			                                                        <div class="col-7 kt-margin-0" style="padding:0px">
+																		<div class="input-group">
+				                                                            <label class="col-form-label kt-margin-r-10">Qty :</label>
+																			<input type="text" class="form-control kt-margin-r-10 input-group-child-normal" name="treatment_barang_jumlah1_1" placeholder="Jumlah">
+																			<button type="button" class="btn btn-success btn-icon treatment_barang_add" id="1" data-counter="1"><i class="fa fa-plus"></i></button>
+																		</div>
+			                                                        </div>
 																</div>
-																<button type="button" class="btn btn-success btn-icon col-2" id="treatment_barang_add"><i class="fa fa-plus"></i></button>
-	                                                        </div>
+															</div>
 	                                                    </div>
 	                                                </div>
 												</div>
 												<div class="form-group justify-end">
-													<button type="button" class="btn btn-link" style="padding-right:0px;" id="treatment_add" onclick="addTreatment()"><i class="flaticon-add"></i>Tambah Treatment</button>
+													<button type="button" class="btn btn-link" style="padding-right:0px;" id="treatment_add"><i class="flaticon-add"></i>Tambah Treatment</button>
 												</div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-4 col-form-label">Foto</label>
@@ -498,46 +502,59 @@ License: You must have a valid license purchased only from themeforest(the above
 			}
 
 			// Add button
+			var i = 1;
 			$('#treatment_add').click(function() {
+				i++;
 				document.querySelector('#treatment_list').insertAdjacentHTML (
 					'beforeend',
-					`<div class="form-group row">
-						<label for="example-text-input" class="col-4 col-form-label">Treatment</label>
-						<div class="col-8">
-							<input type="text" class="form-control" name="treatment_nama" placeholder="Treatment">
+					`<div class="form-group row kt-margin-b-10">
+						<label for="example-text-input" class="col-sm-4 col-form-label">Treatment : </label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control" name="treatment_nama`+ i +`" placeholder="Treatment">
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="example-text-input" class="col-4 col-form-label">Pemakaian</label>
-						<div class="row col-8 kt-margin-0" id=treatment_barang_list>
-							<div class="col-5" style="padding-left:0px">
-								<input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
-							</div>
-							<div class="row col-7 kt-margin-0" style="padding:0px">
-								<label for="example-text-input" class="col-2 col-form-label">Qty</label>
-								<div class="col-8">
-									<input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+						<label for="example-text-input" class="col-sm-4 col-form-label">Pemakaian : </label>
+						<div class="col-sm-8" id="treatment_barang_list`+ i +`">
+							<div class="col-12">
+								<div class="row">
+									<div class="col-5" style="padding-left:0px">
+										<input type="text" class="form-control" name="treatment_barang`+ i +`_1" placeholder="Pemakaian">
+									</div>
+									<div class="col-7 kt-margin-0" style="padding:0px">
+										<div class="input-group">
+											<label class="col-form-label kt-margin-r-10">Qty :</label>
+											<input type="text" class="form-control kt-margin-r-10 input-group-child-normal" name="treatment_barang_jumlah`+ i +`_1" placeholder="Jumlah">
+											<button type="button" class="btn btn-success btn-icon treatment_barang_add" id="`+ i +`" data-counter="1"><i class="fa fa-plus"></i></button>
+										</div>
+									</div>
 								</div>
-								<button type="button" class="btn btn-success btn-icon col-2" id="treatment_barang_add"><i class="fa fa-plus"></i></button>
 							</div>
 						</div>
 					</div>`
 				)
 			});
 
-			$('#treatment_barang_add').click(function() {
-				document.querySelector('#treatment_barang_list').insertAdjacentHTML (
-					'afterbegin',
-					`<div class="col-5" style="padding-left:0px; margin-bottom: 10px">
-						<input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
-					</div>
-					<div class="row col-7 kt-margin-0" style="padding:0px; margin-bottom: 10px">
-						<label for="example-text-input" class="col-2 col-form-label">Qty</label>
-						<div class="col-10" style="padding-right: 0px">
-							<input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+			$(document).on('click', '.treatment_barang_add', function() {
+				var counter =  $(this).data('counter');
+				counter++;
+				$(this).data('counter', counter);
+				var barang_counter = $(this).attr('id');
+				console.log(counter);
+				var barang_id = '#treatment_barang_list' + barang_counter;
+				$("#treatment_list").contents().find(barang_id).prepend(`<div class="col-12 kt-margin-b-5">
+					<div class="row">
+						<div class="col-5" style="padding-left:0px">
+							<input type="text" class="form-control" name="treatment_barang`+ barang_counter +`_`+ counter +`" placeholder="Pemakaian">
 						</div>
-					</div>`
-				)
+						<div class="col-7 kt-margin-0" style="padding:0px">
+							<div class="input-group">
+								<label class="col-form-label kt-margin-r-10">Qty :</label>
+								<input type="text" class="form-control input-group-child-normal" name="treatment_barang_jumlah`+ barang_counter +`_`+ counter +`" placeholder="Jumlah">
+							</div>
+						</div>
+					</div>
+				</div>`);
 			});
 
 			// Sweetalert
